--- a/la_panthere/index.html
+++ b/la_panthere/index.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="./css/et-line.css">
-    <link rel="preload" as="font">
+    <link href="https://fonts.googleapis.com/css?family=et-line:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=fontawesome-webfont:400,700&display=swap" rel="stylesheet">
+
 
 
     <script src="./js/jquery-2.1.0.js"></script>
