--- a/la_panthere/index.html
+++ b/la_panthere/index.html
@@ -6,14 +6,14 @@
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta http-equiv="Cache-control" content="public">
     <link rel="shortcut icon" type="image/png" href="favicon.ico">
 
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="./css/et-line.css">
-    <link href="https://fonts.googleapis.com/css?family=et-line:400,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=fontawesome-webfont:400,700&display=swap" rel="stylesheet">
+
 
 
 
@@ -238,22 +238,22 @@
                         <div class="row row-no-gutters social">
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+                                    <a class="social twitter" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+                                    <a class="social facebook" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+                                    <a class="social dribbble" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+                                    <a class="social instagram" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
