--- a/la_panthere/index.html
+++ b/la_panthere/index.html
@@ -238,22 +238,22 @@
                         <div class="row row-no-gutters social">
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social twitter" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+                                    <a class="social" href="index.html">Twitter<span class="fa fa-twitter icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social facebook" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+                                    <a class="social" href="index.html">Facebook<span class="fa fa-facebook icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social dribbble" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+                                    <a class="social" href="index.html">Dribbble<span class="fa fa-dribbble icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social instagram" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+                                    <a class="social" href="index.html">Instagram<span class="fa fa-instagram icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
