corrections on page2

--- a/la_panthere/page2.html
+++ b/la_panthere/page2.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+    <meta name="description" content="Vous pouvez contacter notre agence afin de concrétiser votre projet de site web">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -46,11 +46,6 @@
                         <ul class="site-navigation nav navbar-nav">
                             <li>
                                 <a href="index.html">Accueil</a>
-                            </li>
-                            <li>
-                            </li>
-                            <li>
-                                <a href="page2.html">page2 &gt;</a>
                             </li>
                         </ul>
                     </div>
