--- a/la_panthere/page2.html
+++ b/la_panthere/page2.html
@@ -30,7 +30,7 @@
 
 <body>
     <!-- Principal conteneur -->
-    <div class="page-container">
+    <div class="page-container" id="top">
 
         <!-- bloc-0 -->
         <div class="bloc bgc-white l-bloc " id="bloc-0">
@@ -117,7 +117,7 @@
         <!-- bloc-7 END -->
 
         <!-- ScrollToTop Button -->
-        <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+        <a href="#top" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><i class="fa-solid fa-arrow-up"></i></a>
         <!-- ScrollToTop Button END-->
 
 
