correct label on page2

--- a/la_panthere/index.html
+++ b/la_panthere/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <meta http-equiv="Cache-control" content="public" max-age="31536000">
+    <meta http-equiv="Cache-control" content="public max-age=31536000">
     <link rel="shortcut icon" type="image/png" href="favicon.ico">
 
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
