--- a/la_panthere/page2.html
+++ b/la_panthere/page2.html
@@ -80,26 +80,27 @@
                         <form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
                             <div class="form-group">
                                 <label>
-							Nom
-						</label>
-                                <input id="name" class="form-control" required />
+							        Nom
+                                    <input id="name" class="form-control" required />
+                                </label>
                             </div>
                             <div class="form-group">
                                 <label>
-							Adresse email
-						</label>
-                                <input id="email" class="form-control" type="email" required />
+							        Adresse email
+                                    <input id="email" class="form-control" type="email" required />
+                                </label>
                             </div>
                             <div class="form-group">
                                 <label>
-							Comment nous avez-vous connu ?
-						</label>
-                                <input class="form-control" type="email" required id="input_504" />
+							        Comment nous avez-vous connu ?
+                                    <input class="form-control" type="email" required id="input_504" />
+                                </label>
                             </div>
                             <div class="form-group">
                                 <label>
-							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+							        Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+                                    <textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+                                </label>
                             </div>
                             <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
