--- a/la_panthere/page2.html
+++ b/la_panthere/page2.html
@@ -37,7 +37,7 @@
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="atlanta web design logo" height="40" /></a>
+                        <a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" width="220" height="40" alt="atlanta web design logo" height="40" /></a>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -118,7 +118,7 @@
         <!-- bloc-7 END -->
 
         <!-- ScrollToTop Button -->
-        <a href="#top" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><i class="fa-solid fa-arrow-up"></i></a>
+        <a href="#top" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">UP!<i class="fa-solid fa-arrow-up"></i></a>
         <!-- ScrollToTop Button END-->
 
 
