--- a/la_panthere/index.html
+++ b/la_panthere/index.html
@@ -17,9 +17,9 @@
 
 
 
-    <script src="./js/jquery-2.1.0.js"></script>
+    <!--<script src="./js/jquery-2.1.0.js"></script>-->
     <script src="./js/bootstrap.js"></script>
-    <script src="./js/blocs.js"></script>
+    <!--<script src="./js/blocs.js"></script>-->
 
 
     <title>La panthere</title>
