--- a/la_panthere/index.html
+++ b/la_panthere/index.html
@@ -9,17 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.5/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css" defer>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" defer>
     <link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 
 
 
-    <!--<script src="./js/jquery-2.1.0.js"></script>-->
-    <script src="./js/bootstrap.js"></script>
-    <!--<script src="./js/blocs.js"></script>-->
+    <script src="./js/jquery-2.1.0.js" defer></script>
+    <script src="./js/bootstrap.js" defer></script>
+    <script src="./js/blocs.js"></script>
 
 
     <title>La panthere</title>
