--- a/la_panthere/contact.html
+++ b/la_panthere/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="Vous pouvez contacter notre agence afin de concrétiser votre projet de site web">
+    <meta name="description" content="Parlons web design ! Nous sommes ravis que vous souhaitiez collaborer avec notre agence. Parlez-nous de votre projet en complétant le formulaire ci-dessous.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -133,22 +133,22 @@
                         <div class="row row-no-gutters social">
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html">Twitter<span class="fa fa-twitter icon-md"></span></a>
+                                    <a class="social column" href="index.html">Twitter<span class="fa fa-twitter icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html">Facebook<span class="fa fa-facebook icon-md"></span></a>
+                                    <a class="social column" href="index.html">Facebook<span class="fa fa-facebook icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html">Dribbble<span class="fa fa-dribbble icon-md"></span></a>
+                                    <a class="social column" href="index.html">Dribbble<span class="fa fa-dribbble icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="index.html">Instagram<span class="fa fa-instagram icon-md"></span></a>
+                                    <a class="social column" href="index.html">Instagram<span class="fa fa-instagram icon-md"></span></a>
                                 </div>
                             </div>
                         </div>
