--- a/la_panthere/contact.html
+++ b/la_panthere/contact.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+    <meta http-equiv="Cache-control" content="public">
+    <meta name="keywords" content="entreprise webdesign Lyon, seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="Parlons web design ! Nous sommes ravis que vous souhaitiez collaborer avec notre agence. Parlez-nous de votre projet en complétant le formulaire ci-dessous.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
