--- a/la_panthere/index.html
+++ b/la_panthere/index.html
@@ -9,17 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css" defer>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" defer>
-    <link rel="stylesheet" type="text/css" href="./css/et-line.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="./css/font-awesome.min.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="./css/et-line.css" media="print" onload="this.media='all'">
 
-
-
-
-    <script src="./js/jquery-2.1.0.js" defer></script>
-    <script src="./js/bootstrap.js" defer></script>
-    <script src="./js/blocs.js"></script>
 
 
     <title>La panthere</title>
@@ -167,7 +161,8 @@
                 </div>
                 <div class="row tight-width-whitespace portfolio-row">
                     <div class="col-sm-6">
-                        <a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" width="270" height="270" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+                        <a href="img/1.webp" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+                            <img src="img/1.webp" loading="lazy" width="270" height="270" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
                         <h2 class="mg-md text-center">
                             Refonte d'un site web pour un journal local
                         </h2>
@@ -176,7 +171,8 @@
                         </p>
                     </div>
                     <div class="col-sm-6">
-                        <a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" width="270" height="270" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+                        <a href="img/2.webp" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+                            <img src="img/2.webp" loading="lazy" width="270" height="270" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
                         <h2 class="mg-md text-center">
                             Création d'un site web pour photographes
                         </h2>
@@ -187,7 +183,8 @@
                 </div>
                 <div class="row tight-width-whitespace portfolio-row">
                     <div class="col-sm-6">
-                        <a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" width="270" height="270" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
+                        <a href="img/3.webp" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+                            <img src="img/3.webp" loading="lazy" width="270" height="270" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
                         <h2 class="mg-md text-center">
                             Création d'un site internet pour un voyageur
                         </h2>
@@ -196,7 +193,8 @@
                         </p>
                     </div>
                     <div class="col-sm-6">
-                        <a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" width="270" height="270" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+                        <a href="img/4.webp" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
+                            <img src="img/4.webp" loading="lazy" width="270" height="270" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
                         <h2 class="mg-md text-center">
                             Conception d'un site pour une agence de mariage
                         </h2>
@@ -302,7 +300,9 @@
 
     </div>
     <!-- Principal conteneur END -->
-
+    <script src="js/jquery-2.1.0.js" defer></script>
+    <script src="js/blocs.js" defer></script>
+    <script src="./js/bootstrap.js" defer></script>
 
 </body>
 
