--- a/la_panthere/index.html
+++ b/la_panthere/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Cache-control" content="public">
     <meta name="keywords" content="entreprise webdesign Lyon, seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet">
+    <meta name="description" content="Bienvenue chez l'agence La Panthère nous vous aideront à devenir attractifs et visibles sur Internet!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
