--- a/la_panthere/contact.html
+++ b/la_panthere/contact.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="Cache-control" content="public">
     <meta name="keywords" content="entreprise webdesign Lyon, seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="Une question? Une demande de devis? N'hésitez pas à contacter notre équipe support!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -38,7 +37,7 @@
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" width="220" height="40" alt="atlanta web design logo" height="40" /></a>
+                        <a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" width="220" height="40" alt="atlanta web design logo" /></a>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -78,7 +77,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <!-- A retirer ou a modifier?-->
-                        <form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+                        <form id="form_1" novalidate >
                             <div class="form-group">
                                 <label>
 							        Nom
