--- a/la_panthere/index.html
+++ b/la_panthere/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="Cache-control" content="public">
     <meta name="keywords" content="entreprise webdesign Lyon, seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="Bienvenue chez l'agence La Panthère nous vous aideront à devenir attractifs et visibles sur Internet!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -62,7 +61,7 @@
             <div class="container bloc-lg">
                 <div class="row tight-width-whitespace">
                     <div class="col-sm-12">
-                        <img src="img/logo.png" width="100" height="100" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris" />
+                        <img src="img/logo.png" width="100" height="100" class="center-block image-resize-mode" alt="Agence La Panthère, agence web paris, création logo paris" />
                         <h1 class="text-center hero-bloc-text tc-white ">
                             Agence La Panthère
                         </h1>
@@ -261,34 +260,6 @@
                                     <li><a href="pizza.com">pizza.com</a></li>
                                     <li><a href="matoiture.com">matoiture.com</a></li>
                                     <li><a href="immobilierseo.com">immobilierseo.com</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-sm-4">
-                                Annuaires liste 1
-                                <ul>
-                                    <li><a href="annuaireagence.com">annuaireagence.com</a></li>
-                                    <li><a href="annuaireseo.com">annuaireseo.com</a></li>
-                                    <li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-                                    <li><a href="123seoture.com">123seo.com</a></li>
-                                    <li><a href="123site.com">123site.com</a></li>
-                                    <li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-                                    <li><a href="listeagence.com">listeagence.com</a></li>
-                                    <li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-                                    <li><a href="listeseo.com">listeseo.com</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-sm-4">
-                                Annuaires liste 2
-                                <ul>
-                                    <li><a href="betterseo.com">betterseo.com</a></li>
-                                    <li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-                                    <li><a href="seojuicelien.com">seojuicelien.com</a></li>
-                                    <li><a href="meilleursliens.com">meilleursliens.com</a></li>
-                                    <li><a href="liensagogo.com">liensagogo.com</a></li>
-                                    <li><a href="backlink.com">backlink.com</a></li>
-                                    <li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-                                    <li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-                                    <li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
                                 </ul>
                             </div>
                         </div>
