--- a/la_panthere/contact.html
+++ b/la_panthere/contact.html
@@ -133,22 +133,22 @@
                         <div class="row row-no-gutters social">
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social column" href="index.html">Twitter<span class="fa fa-twitter icon-md"></span></a>
+                                    <a class="social column" href="https://twitter.com/?lang=fr">Twitter<span class="fa fa-twitter icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social column" href="index.html">Facebook<span class="fa fa-facebook icon-md"></span></a>
+                                    <a class="social column" href="https://www.facebook.com/">Facebook<span class="fa fa-facebook icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social column" href="index.html">Dribbble<span class="fa fa-dribbble icon-md"></span></a>
+                                    <a class="social column" href="https://dribbble.com/">Dribbble<span class="fa fa-dribbble icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social column" href="index.html">Instagram<span class="fa fa-instagram icon-md"></span></a>
+                                    <a class="social column" href="https://www.instagram.com/?hl=fr">Instagram<span class="fa fa-instagram icon-md"></span></a>
                                 </div>
                             </div>
                         </div>
