--- a/la_panthere/index.html
+++ b/la_panthere/index.html
@@ -34,7 +34,7 @@
 
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" width="220" height="40" alt="paris web design logo agence web meilleure agence" /></a>
+                        <a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp"  width="220" height="40" alt="paris web design logo agence web meilleure agence" /></a>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -66,7 +66,7 @@
                             Agence La Panthère
                         </h1>
                         <div class="text-center">
-                            <a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+                            <a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
                         </div>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                             <p class="white">
                                 Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre
                                 site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link"
-                                    href="page2.html">Contactez notre équipe</a><br>
+                                    href="contact.html">Contactez notre équipe</a><br>
                             </p>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
                 <div class="row tight-width-whitespace portfolio-row">
                     <div class="col-sm-6">
                         <a href="img/3.webp" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-                            <img src="img/3.webp" loading="lazy" width="270" height="270" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
+                            <img src="img/3.webp" loading="lazy" width="270" height="270" class="cover img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
                         <h2 class="mg-md text-center">
                             Création d'un site internet pour un voyageur
                         </h2>
@@ -193,7 +193,7 @@
                     </div>
                     <div class="col-sm-6">
                         <a href="img/4.webp" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-                            <img src="img/4.webp" loading="lazy" width="270" height="270" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+                            <img src="img/4.webp" loading="lazy" width="270" height="270" class="cover img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
                         <h2 class="mg-md text-center">
                             Conception d'un site pour une agence de mariage
                         </h2>
@@ -232,36 +232,25 @@
                         <div class="row row-no-gutters social">
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social column" href="index.html">Twitter<span class="fa fa-twitter icon-md"></span></a>
+                                    <a class="social column" href="https://twitter.com/?lang=fr">Twitter<span class="fa fa-twitter icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social column" href="index.html">Facebook<span class="fa fa-facebook icon-md"></span></a>
+                                    <a class="social column" href="https://www.facebook.com/">Facebook<span class="fa fa-facebook icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social column" href="index.html">Dribbble<span class="fa fa-dribbble icon-md"></span></a>
+                                    <a class="social column" href="https://dribbble.com/">Dribbble<span class="fa fa-dribbble icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social column" href="index.html">Instagram<span class="fa fa-instagram icon-md"></span></a>
+                                    <a class="social column" href="https://www.instagram.com/?hl=fr">Instagram<span class="fa fa-instagram icon-md"></span></a>
                                 </div>
                             </div>
                             <!--<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>-->
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-4">
-                                Partenaires
-                                <ul>
-                                    <li><a href="voiture.com">voiture.com</a></li>
-                                    <li><a href="pizza.com">pizza.com</a></li>
-                                    <li><a href="matoiture.com">matoiture.com</a></li>
-                                    <li><a href="immobilierseo.com">immobilierseo.com</a></li>
-                                </ul>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -271,9 +260,19 @@
 
     </div>
     <!-- Principal conteneur END -->
-    <script src="js/jquery-2.1.0.js" defer></script>
-    <script src="js/blocs.js" defer></script>
-    <script src="./js/bootstrap.js" defer></script>
+    <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"
+    integrity="sha512-qp27nuUylUgwBZJHsmm3W7klwuM5gke4prTvPok3X5zi50y3Mo8cgpeXegWWrdfuXyF2UdLWK/WCb5Mv7CKHcA=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"
+    integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script>
+      <script src="js/bloc.min.js" defer></script>
 
 </body>
 
