--- a/la_panthere/contact.html
+++ b/la_panthere/contact.html
@@ -37,7 +37,7 @@
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" width="220" height="40" alt="atlanta web design logo" /></a>
+                        <a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" width="220" height="40" alt="atlanta web design logo" /></a>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
